third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/bug_16954.disassembled.exp
processed 12 tasks
task 0 lines 3-317:  publish [// Bytecode version v8]
Error: error: expected `>`, found `|`
   ┌─ test:52:21
   │
52 │     call_closure <||||u64>
   │                     ^


task 1 lines 321-321:  run 0xc0ffee::m::test1
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 2 lines 323-323:  run 0xc0ffee::m::test2
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 3 lines 325-325:  run 0xc0ffee::m::test3
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 4 lines 327-327:  run 0xc0ffee::m::test4 --args 42
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 5 lines 329-329:  run 0xc0ffee::m::test5
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 6 lines 331-331:  run 0xc0ffee::m::test6
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 7 lines 333-333:  run 0xc0ffee::m::test7
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 8 lines 335-335:  run 0xc0ffee::m::test8
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 9 lines 337-337:  run 0xc0ffee::m::test9
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 10 lines 339-339:  run 0xc0ffee::m::test10
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 11 lines 341-341:  run 0xc0ffee::m::test11
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
